# orga

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  bump_version.py  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CHANGELOG.md  INDEX.md
docs/developer-guide/: API.md  ARCHITECTURE.md
docs/user-guide/: activity-deletion-events.md  activity-feed.md  auto-trail-start.md  dark-mode.md  dependency-scheduling.md  discussion.md  faq.md  gantt-grouping.md  getting-started.md  hammock-buffer-tasks.md  keyboard-shortcuts.md  my-tasks-sorting.md  rich-text-comments.md  task-manager.md  troubleshooting.md  version-updates.md
frontend/: components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  app-tokens.css  dock-settings.ts  index.css  main.ts  router.ts
frontend/src/components/: ActivityPanel.vue  ContactPanel.vue  CreateEventModal.vue  EventPanel.vue  FloatingTimer.vue  ManualTimeEntryModal.vue  MigrationPanel.vue  NotificationBell.vue  NotificationItem.vue  NotificationPanel.vue  SearchDropdown.vue  TaskManager.vue  TaskPanel.vue
orga/: hooks.py  install.py  modules.txt  patches.txt
orga/demo/: create_demo_project.py
orga/orga/: __init__.py  orga.json
orga/patches/: __init__.py  migrate_time_logs_to_watch.py
orga/tests/: __init__.py  test_api.py  test_assignment_api.py
orga/www/: orga.html  orga.py
(+523 files in other folders)
