[project]
name = "orga"
authors = [
    { name = "Orga", email = "info@orga.localhost"}
]
description = "Orga - Project Management System"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "AGPL-3.0" }
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by Frappe Bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "orga"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
